web/static/css/base.css
/* CSS Reset */

.reset {
    border-width: 1px;
    padding: 0;
    margin: 0;
}

/* Define color variables */
:root {
    --text-color: #343434;
    --main-bg-color: whitesmoke;
    --hover-accent-color: #d8e5f2;
    --link-color: #1083ae;
    --border-color: #d6d6ce;
    --heading-color: #c16622;
    --contrast-bg-color: rgb(120,120,120);
}


ul {
    list-style: none;
    margin: 0;
    padding-left: 10px;
}

a {
    text-decoration: none;
}

a:link, a:visited {
    color: var(--text-color);
}

a:hover {
    color: gray;
}

body {
    font-family: 'ProximaNova-Regular','HelveticaNeue','Helvetica Neue','HelveticaNeueRoman','HelveticaNeue-Roman','Helvetica Neue Roman','TeXGyreHerosRegular','Helvetica','Tahoma','Geneva','Arial',sans-serif;
    width: 100%;
    margin: auto;
    display: flex;
    flex-wrap: wrap;
    font-size: 110%;
    color: var(--text-color);
}

p {
    margin: 0;
}

button {
    border: 1px solid var(--border-color);
    border-radius: 10px;
    font-size: 0.8em;
    height: 30px;
    background-color: white;
    color: var(--text-color);
}

button:focus {outline-width: 0;}

button:active {background-color: lightgray;}

.divider {
    height: 30px;
    border-bottom: 1px solid var(--border-color);
}


/* =============== Help-Feedback =============== */

.help-feedback {
    position: sticky;
    bottom: 0;
    width: 200px;
    height: 40px;
    display: flex;
    margin-left: 80%;
}


.help-feedback a { 
    width: 100px;
    display: inline-block;
    text-align: center;
    padding-top: 10px;
}

.help-feedback a:hover { 
    color: grey
}

#help {
    color: white;
    background-color: var(--link-color);
}

#feedback {
    color: white;
    background-color: #800000;
}



 

/* =============== Footer =============== */

.footer {
    width: 100%;
    background-color: rgb(120, 120, 120);
    display: flex;
    height: 140px;
    font-size: 0.8em;
}

.footer div {
    margin: auto auto auto 100px;
    height: 80px;
}

.footer div p {
    margin: 10px 20px;
    color: white;
}
.footer div a {color: white}

.footer img {
    margin: auto 100px auto auto;
    height: 70px;
}

